2025-08-07  Zhengyi Fu  <i@fuzy.me>

	Add OSC 8 support to comint

	* init.el (+handle-osc-8, +comint-handle-osc-8): New functions.

2025-08-07  Zhengyi Fu  <i@fuzy.me>

	* init.el (+custom-faces): Add some color to tab-line in dark
	mode.

2025-08-07  Zhengyi Fu  <i@fuzy.me>

	* init.el (+init-fontsets): Specify font for emoji.

2025-08-06  Zhengyi Fu  <i@fuzy.me>

	* init.el (+elfeed-display-buffer): Ensure the show buffer is at
	the bottom.

2025-08-06  Zhengyi Fu  <i@fuzy.me>

	Prevent implied frame resize when switching themes

	* init.el (+inhibit-implied-resize): New function.
	(enable-theme, disable-theme): Adviced.

2025-08-06  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/gptel-config.el ("Moonshot"): Add model
	"kimi-k2-turbo-preview".
	(deepseek-translator): Change temperature to 1.3
	(deepseek-assistant): New preset.
	(+gptel-shellcheck-fix): Use `ensure-list'.  Force use of tools.

	* site-lisp/treesit-config.el (treesit-language-source-alist):
	Update recipe for c and markdown.

	* init.el: Bind C-c R to `rg-menu'.
	(treesit): Load treesit-config.el.

2025-08-06  Zhengyi Fu  <i@fuzy.me>

	* init.el (+init-fontsets): Update font settings.

2025-08-05  Zhengyi Fu  <i@fuzy.me>

	* init.el (+init-fontsets): Simplify font settings.

2025-08-05  Zhengyi Fu  <i@fuzy.me>

	* init.el (+init-fontsets): Modify the default fontset.

2025-08-05  Zhengyi Fu  <i@fuzy.me>

	Update font setting

	* init.el (+custom-fonts-alist, +apply-font-setting)
	(+apply-custom-fonts, +custom-fontset)
	(+nerd-icons--after-make-frame-h): Remove.
	(+init-fontsets): New function.

2025-08-05  Zhengyi Fu  <i@fuzy.me>

	Add indicator to recursive minibuffer

	* init.el: Enable `minibuffer-depth-indicate-mode'.
	(+custom-faces): Customize `minibuffer-depth-indicator' face.
	(minibuffer-depth-indicator-function): Set to a lambda that
	returns unicode symbols.

2025-08-04  Zhengyi Fu  <i@fuzy.me>

	* init.el (+import-env-var-for-display): Use frame parameter
	DISPAY.
